# sdl_game

./: .gitignore  CMakeLists.txt  README.md
CMAKE/: FindSDL2Mixer.cmake  FindSDL2TTF.cmake
src/: Components.hpp  ECS.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Map.cpp  Map.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp
